--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Week 2 Lab</title>
 </head>
 <body>
-    <p>Hello my friends!</p>
+    <p>Hello my friends and family!</p>
 </body>
 </html>
