--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Week 2 Lab</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Musiccessories</title>
 </head>
+
 <body>
-    <p>Hello my friends and family!</p>
+  <div>
+    <div>
+      <h1>
+        <a href="index.html">
+          <span>Hi! Welcome to</span>
+          <span>Musiccessories!</span>
+        </a>
+      </h1>
+  
+      <p>
+        <strong>No instruments.</strong> <em>Only accessories.</em>
+      </p>
+    </div>
+    <div>
+      <div>
+        <div>
+          <h2>Guitar Strings</h2>
+          <div>
+            <img src="https://images.unsplash.com/photo-1516924962500-2b4b3b99ea02?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=640&q=80">
+          </div>
+          <div>These are favored by many musicians around the globe. Made from a nickel-plated steel wire wrapped around a hex-shaped, steel core wire. The plain strings are made of specially tempered, tin-plated, high-carbon steel, producing a well-balanced tone.</div>
+          <div>$5.49</div>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h2>Guitar Picks (12-pack)</h2>
+          <div>
+            <img src="https://images.unsplash.com/photo-1604227176135-2a20c22cad2b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=640&q=80">
+          </div>
+          <div>A wider body and a rounded tip have made this pick a favorite with players of every style. Celluloid picks combine the traditional tone and feel of celluloid, with beautiful and unique colors.</div>
+          <div>$2.99</div>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h2>Drum Sticks (Pair)</h2>
+          <div>
+            <img src="https://images.unsplash.com/photo-1519892300165-cb5542fb47c7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=640&q=80">
+          </div>
+          <div>These 100% hickory drum sticks are made in the USA.</div>
+          <div>$3.99</div>
+        </div>
+      </div>
+    </div>
+    <h1>Ready to Order?</h1>
+    <form netlify>
+      <label class="block mt-4 font-bold" for="name">What is your name?</label>
+      <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
+      focus:border-purple-500" type="text" id="name" name="name">
+    
+      <label class="block mt-4 font-bold" for="favorite-color">What is your favorite
+      color?</label>
+      <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
+      focus:border-purple-500" type="text" id="favorite-color" name="favoriteColor">
+    
+      <button class="block mt-4 text-white bg-purple-500 rounded px-4 py-2">Submit form!</button>
+    </form>
+  </div>
 </body>
+
 </html>
