--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Musiccessories</title>
@@ -13,8 +13,7 @@
     <div>
       <h1>
         <a href="index.html">
-          <span>Hi! Welcome to</span>
-          <span>Musiccessories!</span>
+          <span>Hi! Welcome to Musiccessories!</span>
         </a>
       </h1>
   
